# house-price-ml-system

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
models/: latest.joblib
src/house_price_prediction/: api.py  config.py  config.yaml  loader.py  predict.py  preprocess.py  train.py
src/house_price_prediction/static/: about.css  about.html  index.html  script.js  style.css  styles.css
tests/: test_api.py  test_loader_unit.py  test_predict_unit.py  test_preprocess_unit.py
